--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <h2>JavaScript Test Form</h2>
-                <hr>
+            <div class="col-md-10">
+                <h2>JSHinterface</h2>
             </div>
+            <div class="col-md-2">
+                <button id="status" class="btn btn-secondary">Check Key</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col"><hr></div>
         </div>
         <div class="row">
             <div class="col">
@@ -46,7 +51,7 @@
         </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal 1 -->
     <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog" aria-labelledby="resultsModalTitle"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -57,7 +62,27 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" id="modal-content">
+                <div class="modal-body" id="results-content">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal 2 -->
+    <div class="modal fade" id="statusModal" tabindex="-1" role="dialog" aria-labelledby="statusModalTitle"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="statusModalTitle">Key Status</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="status-content">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
