--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>JSHint Front End</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <div class="col-md-10">
                 <h2>JSHinterface</h2>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 text-right">
                 <button id="status" class="btn btn-secondary">Check Key</button>
             </div>
         </div>
