--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>JSHint Front End</title>
@@ -16,7 +17,7 @@
             <div class="col-md-10">
                 <h2>JSHinterface</h2>
             </div>
-            <div class="col-md-2 text-right">
+            <div class="col-md-2 text-end">
                 <button id="status" class="btn btn-secondary">Check Key</button>
             </div>
         </div>
@@ -26,54 +27,77 @@
         <div class="row">
             <div class="col">
                 <form id="checksform">
-                    <div class="form-group">
-                        <label for="filename">Filename:</label>
-                        <input class="form-control" aria-describedby="fileHelp" placeholder="Enter filename" id="filename" name="filename" type="text">
-                        <small id="fileHelp" class="form-text text-muted">Not required if you are entering a URL.</small>
+                    <div class="row mb-3">
+                        <label for="filename" class="col-2 form-label">Filename:</label>
+                        <div class="col-6">
+                            <input class="form-control" aria-describedby="fileHelp" placeholder="Enter filename" id="filename" name="filename" type="text">
+                            <small id="fileHelp" class="form-text">Not required if you are entering a URL.</small>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="url">URL:</label>
-                        <input class="form-control" aria-describedby="urlHelp" placeholder="Enter URL" id="url" name="url" type="url">
-                        <small id="urlHelp" class="form-text text-muted">Enter a URL or paste JavaScript content below.</small>
+                    <div class="row mb-3">
+                        <label for="url" class="col-2 form-label">URL:</label>
+                        <div class="col-6">
+                            <input class="form-control" aria-describedby="urlHelp" placeholder="Enter URL" id="url" name="url" type="url">
+                            <small id="urlHelp" class="form-text">Enter a URL or paste JavaScript content below.</small>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="options">Options:</label>
-                        <input class="form-control" aria-describedby="optHelp" placeholder="Enter options list" id="options" name="options" type="text">
-                        <small id="optHelp" class="form-text text-muted">Options are: es6, strict, relax, jquery</small>
+                    <div class="row mb-3">
+                        <label for="options" class="col-2 form-label">Options:</label>
+                        <div class="col-6">
+                            <div class="form-check form-switch form-check-inline">
+                                <input class="form-check-input" name="options" type="checkbox" value="es6">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">ES6</label>
+                            </div>
+                            <div class="form-check form-switch form-check-inline">
+                                <input class="form-check-input" name="options" type="checkbox" value="es8">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">ES8</label>
+                            </div>
+                            <div class="form-check form-switch form-check-inline">
+                                <input class="form-check-input" name="options" type="checkbox" value="jquery">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">jQuery</label>
+                            </div>
+                            <div class="form-check form-switch form-check-inline">
+                                <input class="form-check-input" name="options" type="checkbox" value="relax">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Relax</label>
+                            </div>
+                            <div class="form-check form-switch form-check-inline">
+                                <input class="form-check-input" name="options" type="checkbox" value="strict">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Strict</label>
+                            </div>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="options">Code:</label>
-                        <textarea class="form-control" id="code" name="code" rows="15" cols="80"></textarea><br>
+                    <div class="row mb-3">
+                        <label for="code" class="col-2 form-label">Code:</label>
+                        <div class="col-8">
+                            <textarea class="form-control" id="code" name="code"></textarea><br>
+                        </div>
                     </div>
                 </form>
-                <button class="btn btn-primary" id="submit">Run Checks</button>
+                <button class="btn btn-primary text-start" id="submit">Run Checks</button>
             </div>
         </div>
     </div>
 
     <!-- Modal 1 -->
-    <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog" aria-labelledby="resultsModalTitle"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
+    <div class="modal" id="resultsModal" tabindex="-1">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="resultsModalTitle"></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="results-content">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
