--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <label for="filename" class="col-2 form-label">Filename:</label>
                         <div class="col-6">
                             <input class="form-control" aria-describedby="fileHelp" placeholder="Enter filename" id="filename" name="filename" type="text">
-                            <small id="fileHelp" class="form-text">Not required if you are entering a URL.</small>
+                            <small id="fileHelp" class="form-text">Mandatory if you are pasting code, but not used if you enter a URL.</small>
                         </div>
                     </div>
                     <div class="row mb-3">
