--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                                 <label class="form-check-label" for="flexSwitchCheckDefault">ES8</label>
                             </div>
                             <div class="form-check form-switch form-check-inline">
+                                <input class="form-check-input" name="options" type="checkbox" value="harsh">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Harsh</label>
+                            </div>
+                            <div class="form-check form-switch form-check-inline">
                                 <input class="form-check-input" name="options" type="checkbox" value="jquery">
                                 <label class="form-check-label" for="flexSwitchCheckDefault">jQuery</label>
                             </div>
